--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,3 +1,48 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    body {
+        @apply bg-gray-50 dark:bg-gray-700;
+    }
+
+    p, li {
+        @apply text-sm text-gray-500 dark:text-gray-300;
+    }
+
+    *, ::before, ::after {
+        @apply dark:border-gray-600;
+    }
+
+    h1, h2, h3, h4, h5, h6 {
+        @apply text-gray-900 dark:text-white leading-6;
+    }
+
+    h1, h2 {
+        @apply font-semibold;
+    }
+
+    h3, h4, h5, h6 {
+        @apply font-medium;
+    }
+
+    h1 {
+        @apply text-3xl;
+    }
+    h2 {
+        @apply text-2xl;
+    }
+    h3 {
+        @apply text-xl;
+    }
+    h4 {
+        @apply text-lg;
+    }
+    h5 {
+        @apply text-base;
+    }
+    h6 {
+        @apply text-sm;
+    }
+}
